--- a/CookPopularControl/Themes/RadioButtonStyle.xaml
+++ b/CookPopularControl/Themes/RadioButtonStyle.xaml
@@ -93,7 +93,7 @@
                                   Data="{TemplateBinding common:FrameworkElementBaseAttached.IconGeometry}"
                                   Fill="{TemplateBinding pc:RadioButtonAssistant.CheckedBrush}"
                                   Stretch="Uniform"
-                                  Visibility="Hidden" />
+                                  Visibility="{Binding RelativeSource={RelativeSource Mode=TemplatedParent},Path=IsChecked,Converter={pt:BooleanToVisibilityConverter}}" />
                             <ContentPresenter Content="{TemplateBinding Content}"
                                               ContentTemplate="{TemplateBinding ContentTemplate}"
                                               ContentStringFormat="{TemplateBinding ContentStringFormat}"
@@ -106,14 +106,42 @@
                         </DockPanel>
                     </Border>
                     <ControlTemplate.Triggers>
-                        <Trigger Property="IsChecked" Value="{x:Null}">
-                            <Setter Property="Visibility" Value="Hidden" TargetName="PART_Path" />
-                        </Trigger>
-                        <Trigger Property="IsChecked" Value="False">
-                            <Setter Property="Visibility" Value="Hidden" TargetName="PART_Path" />
-                        </Trigger>
-                        <Trigger Property="IsChecked" Value="True">
+                        <Trigger Property="pc:RadioButtonAssistant.IsAlwaysShowHeader" Value="True">
                             <Setter Property="Visibility" Value="Visible" TargetName="PART_Path" />
+                        </Trigger>
+                        <Trigger Property="IsEnabled" Value="False">
+                            <Setter Property="BorderBrush" Value="{DynamicResource UnEnabledBrush}" />
+                            <Setter Property="Background" Value="{DynamicResource UnEnabledBrush}" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="RadioButtonCustomStyle" TargetType="{x:Type RadioButton}" BasedOn="{StaticResource DefaultRadioButtonStyle}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type RadioButton}">
+                    <Border Background="Transparent">
+                        <DockPanel>
+                            <ContentPresenter x:Name="PART_Custom" 
+                                              Content="{TemplateBinding pc:RadioButtonAssistant.Header}"
+                                              Visibility="{Binding RelativeSource={RelativeSource Mode=TemplatedParent},Path=IsChecked,Converter={pt:BooleanToVisibilityConverter}}" />
+                            <ContentPresenter Content="{TemplateBinding Content}"
+                                              ContentTemplate="{TemplateBinding ContentTemplate}"
+                                              ContentStringFormat="{TemplateBinding ContentStringFormat}"
+                                              ContentTemplateSelector="{TemplateBinding ContentTemplateSelector}"
+                                              RecognizesAccessKey="True"
+                                              Margin="{TemplateBinding Padding}"
+                                              SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
+                                              HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                              VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
+                        </DockPanel>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="pc:RadioButtonAssistant.IsAlwaysShowHeader" Value="True">
+                            <Setter Property="Visibility" Value="Visible" TargetName="PART_Custom" />
                         </Trigger>
                         <Trigger Property="IsEnabled" Value="False">
                             <Setter Property="BorderBrush" Value="{DynamicResource UnEnabledBrush}" />
