--- a/CookPopularControl/Themes/BaseStyle/Others/LayoutStyle.xaml
+++ b/CookPopularControl/Themes/BaseStyle/Others/LayoutStyle.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:common="clr-namespace:CookPopularControl.Communal"
                     xmlns:drag="clr-namespace:CookPopularControl.Controls.Dragables"
-                    xmlns:dragCore="clr-namespace:CookPopularControl.Controls.Dragables.Core"
+                    xmlns:dragCore="clr-namespace:CookPopularControl.Controls.Dragables"
                     xmlns:pc="clr-namespace:CookPopularControl.Controls"
                     xmlns:pt="https://Chance.CookPopularCSharpToolkit/2021/xaml">
 
@@ -32,7 +32,7 @@
         <Setter Property="VerticalAlignment" Value="Stretch" />
         <Setter Property="ItemsOrganiser">
             <Setter.Value>
-                <dragCore:CanvasOrganiser />
+                <drag:CanvasOrganiser />
             </Setter.Value>
         </Setter>
         <Setter Property="ItemsPanel">
