--- a/MvvmTestDemo/MainWindow.xaml
+++ b/MvvmTestDemo/MainWindow.xaml
@@ -45,11 +45,18 @@
     </behavior:Interaction.Triggers>
 
     <pc:SideBarWindow.ClientTitleBarAdditionalContent>
-        <Button ToolTip="主页"
-                pc:FrameworkElementBaseAttached.IconGeometry="{StaticResource HomePageGeometry}"
-                pc:FrameworkElementBaseAttached.IconHeight="18" pc:FrameworkElementBaseAttached.IconWidth="18"
-                Command="{Binding HomePageCommand}"
-                Style="{StaticResource WindowIconButtonStyle}" />
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+            <Button ToolTip="主页"
+                    pc:FrameworkElementBaseAttached.IconGeometry="{StaticResource HomePageGeometry}"
+                    pc:FrameworkElementBaseAttached.IconHeight="18" pc:FrameworkElementBaseAttached.IconWidth="18"
+                    Command="{Binding HomePageCommand}"
+                    Style="{StaticResource WindowIconButtonStyle}" />
+            <ToggleButton x:Name="themeTb" ToolTip="主题"      
+                          pc:FrameworkElementBaseAttached.IconWidth="16"
+                          pc:FrameworkElementBaseAttached.IconHeight="16"
+                          pc:FrameworkElementBaseAttached.IconGeometry="{StaticResource ThemeGeometry}"                          
+                          Style="{StaticResource WindowIconToggleButtonStyle}" />
+        </StackPanel>
     </pc:SideBarWindow.ClientTitleBarAdditionalContent>
 
     <Grid>
@@ -102,6 +109,72 @@
                       VerticalScrollBarVisibility="Hidden">
             <StackPanel HorizontalAlignment="Right" pc:NotifyMessageBase.IsParentElement="True" pc:NotifyMessageBase.ParentElementToken="MainWindowToken" />
         </ScrollViewer>
+
+        <pc:ExtendPopup IsOpen="{Binding ElementName=themeTb,Path=IsChecked}" StaysOpen="False"
+                        Placement="Left" PlacementTarget="{Binding ElementName=themeTb}"
+                        HorizontalOffset="10" VerticalOffset="30" AllowsTransparency="True">
+            <Border Margin="5" Width="160" Height="180" Background="White" Effect="{StaticResource ShadowEffectDepth0}">
+                <ListView ItemsSource="{Binding ThemeBrushs}" 
+                          SelectedIndex="{Binding SelectedThemeIndex}"
+                          ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                          ScrollViewer.VerticalScrollBarVisibility="Disabled"
+                          pc:ScrollBarAssistant.VerticalScrollBarWidth="0"
+                          pc:ScrollBarAssistant.HorizontalScrollBarHeight="0">
+                    <behavior:Interaction.Triggers>
+                        <behavior:EventTrigger EventName="SelectionChanged">
+                            <behavior:InvokeCommandAction Command="{Binding SwitchAppThemeCommand}"/>
+                        </behavior:EventTrigger>
+                    </behavior:Interaction.Triggers>
+                    <ListView.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <WrapPanel/>
+                        </ItemsPanelTemplate>
+                    </ListView.ItemsPanel>
+                    <ListView.ItemContainerStyle>
+                        <Style TargetType="{x:Type ListBoxItem}">
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="{x:Type ListBoxItem}">
+                                        <ControlTemplate.Resources>
+                                            <Storyboard x:Key="StartStoryboard">
+                                                <DoubleAnimation Storyboard.TargetName="rec" Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[0].(ScaleTransform.ScaleX)"
+                                                                 Duration="0:0:0.25" To="1.1"/>
+                                                <DoubleAnimation Storyboard.TargetName="rec" Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[0].(ScaleTransform.ScaleY)"
+                                                                 Duration="0:0:0.25" To="1.1"/>
+                                            </Storyboard>
+                                        </ControlTemplate.Resources>
+                                        <pc:Badge Margin="10,10,0,10" Direction="RightBottom" IsShowBadge="{TemplateBinding IsSelected}">
+                                            <pc:Badge.Element>
+                                                <Border Width="16" Height="16" CornerRadius="8" Background="Red">
+                                                    <Path Width="12" Height="12" Data="{StaticResource CheckGeometry}" Fill="White" Stretch="Uniform"/>
+                                                </Border>
+                                            </pc:Badge.Element>
+                                            <Rectangle x:Name="rec" Width="40" Height="40" Fill="{Binding Brush}" RenderTransformOrigin="0.5,0.5">
+                                                <Rectangle.RenderTransform>
+                                                    <TransformGroup>
+                                                        <ScaleTransform/>
+                                                    </TransformGroup>
+                                                </Rectangle.RenderTransform>
+                                            </Rectangle>
+                                        </pc:Badge>
+                                        <ControlTemplate.Triggers>
+                                            <Trigger Property="IsMouseOver" Value="True">
+                                                <Trigger.EnterActions>
+                                                    <BeginStoryboard x:Name="BeginStoryboard" Storyboard="{StaticResource StartStoryboard}"/>
+                                                </Trigger.EnterActions>
+                                                <Trigger.ExitActions>
+                                                    <RemoveStoryboard BeginStoryboardName="BeginStoryboard"/>
+                                                </Trigger.ExitActions>
+                                            </Trigger>
+                                        </ControlTemplate.Triggers>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                        </Style>
+                    </ListView.ItemContainerStyle>
+                </ListView>
+            </Border>
+        </pc:ExtendPopup>
     </Grid>
 
 </pc:SideBarWindow>
