--- a/CookPopularControl/Themes/MessageDialogStyle.xaml
+++ b/CookPopularControl/Themes/MessageDialogStyle.xaml
@@ -33,7 +33,7 @@
         <Setter Property="common:FrameworkElementBaseAttached.CornerRadius" Value="2" />
     </Style>
 
-    <Style x:Key="DefaultMessageDialogStyle" TargetType="{x:Type win:MessageDialog}" BasedOn="{StaticResource NormalWindowStyle}">
+    <Style x:Key="MessageDialogStyle" TargetType="{x:Type win:MessageDialog}" BasedOn="{StaticResource NormalWindowStyle}">
         <Setter Property="MinHeight" Value="172" />
         <Setter Property="MinWidth" Value="335" />
         <Setter Property="MaxWidth" Value="476" />
