--- a/MvvmTestDemo/DemoViews/RadioButtonDemo.xaml
+++ b/MvvmTestDemo/DemoViews/RadioButtonDemo.xaml
@@ -26,7 +26,9 @@
                      pc:RadioButtonAssistant.CheckedBrush="Green" pc:RadioButtonAssistant.CircleDiameter="30"
                      Style="{StaticResource FillFullyRadioButtonStyle}" />
         <StackPanel>
-            <RadioButton x:Name="aaa" Content="Default" Style="{StaticResource Demo.RadioButtonCustomStyle}" />
+            <RadioButton x:Name="aaa" Content="Default" Style="{StaticResource Demo.RadioButtonCustomStyle}" 
+                         Background="Red"
+                         pc:RadioButtonAssistant.IsAlwaysShowHeader="True"/>
             <RadioButton x:Name="ddd"
                          Content="Chance"
                          Foreground="Purple" Background="Green"
