--- a/MvvmTestDemo/DemoViews/WindowsDemo.xaml
+++ b/MvvmTestDemo/DemoViews/WindowsDemo.xaml
@@ -22,6 +22,11 @@
                 Width="200" Height="34"
                 Content="OpenNoneTitleBarWindow"
                 Click="Button_Click" />
+        <Button x:Name="ToastMessage"
+                Width="200" Height="34"
+                Content="OpenToastMessage"
+                Margin="0,20"
+                Click="Button_Click" />
     </StackPanel>
 
 </UserControl>
